<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    app:startDestination="@+id/nav_progress">

    <fragment
        android:id="@+id/nav_progress"
        android:name="ru.mirea.yudaev.languagelearningapp.ui.progress.ProgressFragment"
        android:label="@string/nav_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/nav_achievements"
        android:name="ru.mirea.yudaev.languagelearningapp.ui.achievements.AchievementsFragment"
        android:label="@string/nav_achievements"
        tools:layout="@layout/fragment_achievements" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.mirea.yudaev.languagelearningapp.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
