<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_lessons">

    <fragment
        android:id="@+id/navigation_lessons"
        android:name="ru.mirea.yudaev.languagelearningapp.ui.lessons.LessonsFragment"
        android:label="@string/nav_lessons"
        tools:layout="@layout/fragment_lessons" />

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="ru.mirea.yudaev.languagelearningapp.ui.dictionary.DictionaryFragment"
        android:label="@string/nav_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.mirea.yudaev.languagelearningapp.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
